fix height on mobile gh

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
 
 #bottom-section{
   width: 100%;
-  height: 55%;
+/*  height: 55%;*/
   color: white;
   display: flex;
   flex-direction: column;
